# Yarp-SmartSoft-Integration

./: .gitignore  CMakeLists.txt  LICENSE  README.md
BehaviorTree/BT_TickManager/model/: BT_TickManager.componentParameters
BehaviorTree/BT_engine/: representations.aird
BehaviorTree/BT_engine/OCamlWrap/: wrap.c
BehaviorTree/BT_engine/model/: BT_engine.component  BT_engine.componentDocumentation  BT_engine.componentParameters
BehaviorTree/BT_engine/smartsoft/: CMakeLists.txt
BehaviorTree/BT_runner/: .classpath  .cproject  .project  README.md  bt_description.xml  representations.aird
BehaviorTree/BT_runner/OCamlWrap/: wrap.c  wrap.h
BehaviorTree/BT_runner/Release/: makefile  sources.mk
BehaviorTree/BT_runner/libs/: skillList.xml
BehaviorTree/BT_runner/model/: BT_runner.component  BT_runner.componentDocumentation  BT_runner.componentParameters
BehaviorTree/BT_runner/smartsoft/: CMakeLists.txt  bt_description.xml
BehaviorTree/BT_tickDispatcher/: .cproject  .project  representations.aird
BehaviorTree/BT_tickDispatcher/Release/: makefile  sources.mk
BehaviorTree/BT_tickDispatcher/conf/: config.ini  config.ini_old
BehaviorTree/BT_tickDispatcher/model/: BT_tickDispatcher.component  BT_tickDispatcher.componentDocumentation  BT_tickDispatcher.componentParameters
BehaviorTree/BT_tickDispatcher/smartsoft/: CMakeLists.txt
BehaviorTree/CommYARP_BT/: .cproject
BehaviorTree/CommYARP_BT/Debug/: makefile  sources.mk
BehaviorTree/CommYARP_BT/model/: CommYARP_BT.parameters
Bridges/BT_TickManager/: .classpath  .project  README.md  representations.aird
Bridges/BT_TickManager/smartsoft/: CMakeLists.txt
Bridges/BT_engine/: .classpath  .project  README.md
Bridges/BT_engine/model/: BT_engine.component  BT_engine.componentParameters
Bridges/BridgeV3_FromYarp_BaseStateService/: README.md  representations.aird
Bridges/BridgeV3_FromYarp_BaseStateService/Debug/: sources.mk
Bridges/BridgeV3_FromYarp_BaseStateService/model/: BridgeV3_FromYarp_BaseStateService.component  BridgeV3_FromYarp_BaseStateService.componentDocumentation  BridgeV3_FromYarp_BaseStateService.componentParameters
Bridges/BridgeV3_FromYarp_BaseStateService/smartsoft/: CMakeLists.txt
Bridges/BridgeV3_FromYarp_GridMap2D/: .classpath  .cproject  .project  README.md
Bridges/BridgeV3_FromYarp_GridMap2D/model/: BridgeV3_FromYarp_GridMap2D.component  BridgeV3_FromYarp_GridMap2D.componentDocumentation  BridgeV3_FromYarp_GridMap2D.componentParameters
Bridges/BridgeV3_FromYarp_LaserService/: .cproject  .project  README.md  representations.aird
Bridges/BridgeV3_System_Test1/: .classpath  .cproject  .project  representations.aird
Bridges/BridgeV3_ToYarp_CommNavigationVelocity/: .classpath  .cproject  .project  README.md  representations.aird
Bridges/CommYARP_integration/: .cproject  .project
Bridges/YarpNavigationClient/: .cproject  .project  representations.aird
Components/GenericMovementSkill/: .cproject  .project  README.md  representations.aird
Components/GraspingSkill/: .classpath  .cproject  .project  README.md  representations.aird
Components/SequencePath/: .cproject  .project  README.md  representations.aird
Components/VisionSkill/: .cproject  .project  representations.aird
Components/VisionSkill_Gazebo/: .project  README.md  representations.aird
Components/VisionSkill_Simulator/: .cproject  .project  representations.aird
DummyData/: .classpath  .cproject  .project  CMakeLists.txt  DummyDataConfig.cmake.in
DummyData/debian/: copyright  libdummydata-dev.install  rules
DummyDeploy/: .classpath  .project
DummyDeploy/src/: predeploy-DummySubscriber_instance.sh
DummyPublisher/: .cproject  .project
DummyPublisher/debian/: changelog  copyright  rules
DummyPublisher/model/: DummyPublisher_documentation.compdoc
DummyPublisher/src/: CompHandler.cc
DummySubscriber/: CMakeLists.txt
DummySubscriber/debian/: rules
DummySubscriber/model/: DummySubscriber.di  DummySubscriber_documentation.compdoc
DummySubscriber/src/: CompHandler.cc  ReaderTask.cc  ReaderTask.hh
SystemAnyName/: .classpath  .project
SystemAnyName/model/: SystemAnyName.componentArch
Systems/SystemR1Demo/: .classpath  .project  representations.aird
Systems/System_BT_test/: .classpath  .project  representations.aird
Systems/System_Scenario1/: .classpath  .project  representations.aird
Systems/System_Scenario2_Gazebo/: .classpath  .project  representations.aird
Systems/System_Scenario2_R1/: .classpath  .project  representations.aird
Systems/System_Scenario3_R1/: .classpath  .project  representations.aird
V2/DummySubscriber/: .classpath  .cproject  .project
V3/BT_TickManager/: .classpath  .cproject
V3/BT_engine/: .classpath  .cproject  representations.aird
V3/BridgeV3_FromYarp_BaseStateService/: .cproject  .project  representations.aird
V3/BridgeV3_FromYarp_GridMap2D/: representations.aird
V3/BridgeV3_FromYarp_LaserService/: representations.aird
V3/CommYARP_BT/: .classpath  .project
V3/CommYARP_integration/: .project
V3/TestV3_StateMaster/: .cproject  .project
V3/TestV3_StateSlave/: .classpath  .cproject  .project  representations.aird
cmake/: InstallBasicPackageFiles.cmake  YarpDoc.cmake
cmake/template/: Doxyfile.in
comm_patterns/: CMakeLists.txt
examples/: CMakeLists.txt
examples/push_pattern/: CMakeLists.txt  client.cpp  server.cpp
examples/query_pattern/: client.cpp  server.cpp
examples/send_pattern/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
integration/: CMakeLists.txt
integration/examples/query_pattern/: CMakeLists.txt
libYARP_smartsoft/: CMakeLists.txt
libYARP_smartsoft/include/send_pattern/: SendPatternServer.h
libYARP_smartsoft/include/yarp/smartsoft/: PatternClientBase.h  PushPatternClient.h  PushPatternServer.h  QueryPatternClient.h  QueryPatternServer.h  SendPatternClient.h  SendPatternServer.h  SmartVocabs.h
libYARP_smartsoft/src/: PatternClientBase.cpp  SendPatternClient.cpp  SendPatternServer.cpp
monitors/: CMakeLists.txt  main.cpp
monitors/include/: monitor.h
monitors/src/: monitor.cpp
(+945 files in other folders)
